--- a/uyut/style/scss/_block-2.scss
+++ b/uyut/style/scss/_block-2.scss
@@ -29,7 +29,7 @@
       overflow: hidden;
       border-radius: 25px;
       background-color: white;
-      box-shadow: 0px 0px 5px 5px rgba(34, 60, 80, 0.2);
+      box-shadow: $shadow;
       cursor: pointer;
       transition: $transition;
       z-index: 1;
