--- a/uyut/style/scss/index.scss
+++ b/uyut/style/scss/index.scss
@@ -10,4 +10,7 @@
 @import "block-4";
 @import "block-5";
 @import "block-6";
+@import "block-7";
+@import "block-8";
+@import "block-9";
 @import "footer";
