--- a/uyut/style/scss/_block-4.scss
+++ b/uyut/style/scss/_block-4.scss
@@ -24,7 +24,7 @@
       height: 40px;
       width: 100%;
       margin: 40px 0 0 0;
-      box-shadow: 0px 0px 5px 5px rgba(34, 60, 80, 0.2);
+      box-shadow: $shadow;
       border-radius: 20px;
       > div {
         height: 40px;
@@ -57,7 +57,7 @@
       width: 100%;
       margin: 10px 0 0 0;
       padding: 25px 25px 25px 25px;
-      box-shadow: 0px 0px 5px 5px rgba(34, 60, 80, 0.2);
+      box-shadow: $shadow;
       border-radius: 20px;
       > .title {
         font-family: 'Museo Sans Cyrl 900';
@@ -94,7 +94,7 @@
         transition: $transition;
         &:hover {
           transform: scale(1.03);
-          box-shadow: 0px 0px 5px 5px rgba(34, 60, 80, 0.2);
+          box-shadow: $shadow;
           border-radius: 20px;
         }
         > div {
