--- a/uyut/style/scss/_block-6.scss
+++ b/uyut/style/scss/_block-6.scss
@@ -32,7 +32,7 @@
     }
   }
   > .block-6-content {
-    margin: 70px auto;
+    margin: 70px auto 0;
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
@@ -140,6 +140,32 @@
       width: 100%;
       margin: 30px 0 30px 0;
       background-color: #cbcbcb;
+    }
+  }
+  > .block-6-buttons {
+    > div {
+      flex-grow: 1;
+    }
+    > .buttons {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      flex-wrap: wrap;
+      > button {
+        height: 50px;
+        width: 270px;
+        border-radius: 25px;
+      }
+    }
+    > .text {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      > p {
+        font-family: 'Museo Sans Cyrl 300';
+        font-size: 1em;
+        max-width: 75%;
+      }
     }
   }
 }
