--- a/villaride/style/scss/_block-1.scss
+++ b/villaride/style/scss/_block-1.scss
@@ -13,15 +13,47 @@
       > .block-1-left {
         width: 100%;
         max-width: 800px;
-        > h3 {
-          margin: 50px 0 0 65px;
-          font-family: 'Proxima Nova Rg';
-          text-transform: uppercase;
-          font-size: 2.3em;
-          font-weight: 700;
-          color: #21b744;
-          > span {
-            color: #1f7ec0;
+        > .title {
+          display: flex;
+          height: 100px;
+          align-items: center;
+          > h3 {
+            font-family: 'Proxima Nova Rg';
+            text-transform: uppercase;
+            font-size: 2.5em;
+            font-weight: 700;
+            // color: #21b744;
+            color: rgba(237,18,0,1);
+            letter-spacing: -0.03em;
+          }
+          > div {
+            margin-left: 10px;
+            height: 75px;
+            width: 90px;
+            border-radius: 3px;
+            border: 3px solid rgba(237,18,0,1);
+            display: flex;
+            justify-content: flex-start;
+            align-items: center;
+            position: relative;
+            > h3 {
+              margin: 0 0 0 0;
+              padding: 0;
+              text-transform: uppercase;
+              font-size: 2.5em;
+              font-weight: 700;
+              color: rgba(237,18,0,1);
+              font-family: 'Proxima Nova Rg';
+              > span {
+                // color: #1f7ec0;
+                position: absolute;
+                top: -18px;
+                right: -1px;
+                font-family: "Proxima Nova Bl";
+                font-size: 2em;
+                font-weight: 700;
+              }
+            }
           }
         }
         > .block-1-title {
@@ -132,12 +164,12 @@
           }
         }
         > .block-1-form {
-          margin: 50px 0 0 0;
-          padding: 50px 35px 130px;
-          background-color: rgba(245, 245, 245, 1);
-          -webkit-clip-path: polygon(0 0, 100% 0, 100% 100%, 0 80%);
-          clip-path: polygon(0 0, 100% 0, 100% 100%, 0 80%);
-          box-shadow: 0px 5px 10px 5px rgba(34, 60, 80, 0.2);
+          height: 500px;
+          margin: 25px 0 0 0;
+          padding: 100px 35px 130px;
+          background-image: url('../image/block-1-form.png');
+          background-repeat: no-repeat;
+          background-position: center top;
           position: relative;
           z-index: 2;
           @media (max-width: 820px) {padding: 10px 10px 100px 10px;}
