--- a/villaride/style/index.css
+++ b/villaride/style/index.css
@@ -390,39 +390,78 @@ video {
 }
 .block-1 > div > .block-1-left > .title > h3 {
   font-family: "Proxima Nova Rg";
-  text-transform: uppercase;
   font-size: 2.5em;
-  font-weight: 700;
   color: #ed1200;
+  text-transform: uppercase;
+  margin: 0 0 0 17px;
   letter-spacing: -0.03em;
+  max-width: calc(100% - 137px);
 }
-.block-1 > div > .block-1-left > .title > div {
-  margin-left: 10px;
-  height: 75px;
-  width: 90px;
-  border-radius: 3px;
-  border: 3px solid #ed1200;
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
-  position: relative;
+@media (max-width: 1162px) {
+  .block-1 > div > .block-1-left > .title > h3 {
+    font-size: 2.4em;
+  }
 }
-.block-1 > div > .block-1-left > .title > div > h3 {
-  margin: 0 0 0 0;
-  padding: 0;
-  text-transform: uppercase;
-  font-size: 2.5em;
-  font-weight: 700;
-  color: #ed1200;
-  font-family: "Proxima Nova Rg";
+@media (max-width: 1138px) {
+  .block-1 > div > .block-1-left > .title > h3 {
+    font-size: 2.3em;
+  }
 }
-.block-1 > div > .block-1-left > .title > div > h3 > span {
-  position: absolute;
-  top: -18px;
-  right: -1px;
-  font-family: "Proxima Nova Bl";
-  font-size: 2em;
-  font-weight: 700;
+@media (max-width: 1113px) {
+  .block-1 > div > .block-1-left > .title > h3 {
+    font-size: 2.2em;
+  }
+}
+@media (max-width: 1088px) {
+  .block-1 > div > .block-1-left > .title > h3 {
+    font-size: 2.1em;
+  }
+}
+@media (max-width: 1064px) {
+  .block-1 > div > .block-1-left > .title > h3 {
+    font-size: 2em;
+  }
+}
+@media (max-width: 1039px) {
+  .block-1 > div > .block-1-left > .title > h3 {
+    font-size: 1.9em;
+  }
+}
+@media (max-width: 1015px) {
+  .block-1 > div > .block-1-left > .title > h3 {
+    font-size: 1.8em;
+  }
+}
+@media (max-width: 990px) {
+  .block-1 > div > .block-1-left > .title > h3 {
+    font-size: 1.5em;
+  }
+}
+@media (max-width: 700px) {
+  .block-1 > div > .block-1-left > .title > h3 {
+    font-size: 2em;
+  }
+}
+@media (max-width: 426px) {
+  .block-1 > div > .block-1-left > .title > h3 {
+    font-size: 1.8em;
+  }
+}
+@media (max-width: 400px) {
+  .block-1 > div > .block-1-left > .title > h3 {
+    font-size: 1.2em;
+  }
+}
+.block-1 > div > .block-1-left > .title > .image {
+  height: 100px;
+  width: 100px;
+  margin: 0 10px 0 10px;
+}
+.block-1 > div > .block-1-left > .title > .image > img {
+  height: 100%;
+  width: 100%;
+  -o-object-fit: contain;
+  object-fit: contain;
 }
 .block-1 > div > .block-1-left > .block-1-title {
   margin: 35px 0 0 0;
@@ -582,7 +621,12 @@ video {
 }
 @media (max-width: 820px) {
   .block-1 > div > .block-1-right > .block-1-form {
-    padding: 10px 10px 100px 10px;
+    padding: 100px 10px 130px 10px;
+  }
+}
+@media (max-width: 700px) {
+  .block-1 > div > .block-1-right > .block-1-form {
+    padding: 100px 15px 130px 25px;
   }
 }
 .block-1 > div > .block-1-right > .block-1-form > h2 {
@@ -593,7 +637,7 @@ video {
   text-align: center;
 }
 .block-1 > div > .block-1-right > .block-1-form > h2 > span {
-  color: #21b744;
+  color: #1f7ec0;
 }
 .block-1 > div > .block-1-right > .block-1-form > p {
   font-family: "Proxima Nova Rg";
