--- a/uyut/style/scss/_navigation.scss
+++ b/uyut/style/scss/_navigation.scss
@@ -3,29 +3,37 @@
   box-shadow: $shadow;
   position: relative;
   z-index: 2;
-  > ul {
+  > .header-navigation {
     list-style-type: none;
     height: 100%;
     display: flex;
     justify-content: flex-start;
+    @media (max-width: 624px) {display: none;}
     > li {
       height: 100%;
       display: flex;
       justify-content: space-between;
       align-items: center;
       padding: 0 15px 0 15px;
+      margin: 0 5px 0 0;
       cursor: pointer;
       border-radius: 3px;
       transition: $transition;
+      @media (max-width: 905px) { padding: 0 10px 0 10px; }
+      @media (max-width: 840px) { padding: 0 5px 0 5px; }
+      @media (max-width: 670px) { padding: 0 10px 0 10px; }
       > a {
         font-family: 'Museo Sans Cyrl 500';
         font-size: 1em;
+        white-space: nowrap;
       }
       > .image {
         height: 15px;
         width: 15px;
         margin: 0 0 0 15px;
         transition: $transition;
+        @media (max-width: 765px) { margin: 0 0 0 5px; }
+        @media (max-width: 700px) { display: none; }
         > img {
           height: 100%;
           width: 100%;
@@ -54,17 +62,134 @@
       }
     }
   }
+  > .header-navigation-mobile {
+    list-style-type: none;
+    height: 100%;
+    @media (min-width: 625px) {display: none;}
+    > li {
+      height: 100%;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 0 15px 0 15px;
+      margin: 0 5px 0 0;
+      cursor: pointer;
+      border-radius: 3px;
+      transition: $transition;
+      > a {
+        font-family: 'Museo Sans Cyrl 500';
+        font-size: 1em;
+        white-space: nowrap;
+      }
+      > .image {
+        height: 15px;
+        width: 15px;
+        margin: 0 0 0 15px;
+        transition: $transition;
+        @media (max-width: 350px) {margin: 0 0 0 10px;}
+        > img {
+          height: 100%;
+          width: 100%;
+          -o-object-fit: contain;
+             object-fit: contain;
+        }
+      }
+      &:hover {
+        background: rgb(31,178,246);
+        background: linear-gradient(to bottom,  rgba(31,178,246,1) 0%,rgba(6,101,165,1) 100%);
+        filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#1fb2f6', endColorstr='#0665a5',GradientType=0 );
+        > a {
+          color: white;
+        }
+        > .image {
+          transform: translateX(-80%);
+        }
+      }
+    }
+    > .active {
+      background: rgb(31,178,246);
+      background: linear-gradient(to bottom,  rgba(31,178,246,1) 0%,rgba(6,101,165,1) 100%);
+      filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#1fb2f6', endColorstr='#0665a5',GradientType=0 );
+      > a {
+        color: white;
+      }
+    }
+    > .trigram {
+      font-size: 2em;
+      background: rgb(31,178,246);
+      background: linear-gradient(to bottom,  rgba(31,178,246,1) 0%,rgba(6,101,165,1) 100%);
+      filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#1fb2f6', endColorstr='#0665a5',GradientType=0 );
+      color: white;
+      margin: 0 0 0 auto;
+    }
+  }
 }
 .nav-bottom {
   background-color: #2b2f36;
   box-shadow: none;
-  > ul {
+  > .bottom-navigation {
+    list-style-type: none;
+    height: 100%;
+    display: flex;
+    justify-content: flex-start;
+    @media (max-width: 599px) {display: none;}
     > li {
+      height: 100%;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      cursor: pointer;
+      border-radius: 3px;
+      transition: $transition;
       padding: 0 40px 0 15px;
+      @media (max-width: 872px) { padding: 0 10px 0 10px; }
       > a {
         color: white;
         font-size: 1em;
+        white-space: nowrap;
       }
+    }
+  }
+  > .bottom-navigation-mobile {
+    list-style-type: none;
+    height: 100%;
+    @media (min-width: 600px) {display: none;}
+    > li {
+      height: 100%;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 0 15px 0 15px;
+      cursor: pointer;
+      border-radius: 3px;
+      transition: $transition;
+      > a {
+        font-family: 'Museo Sans Cyrl 500';
+        font-size: 1em;
+        white-space: nowrap;
+        color: white;
+      }
+      &:hover {
+        > a {
+          color: white;
+        }
+        > .image {
+          transform: translateX(-80%);
+        }
+      }
+    }
+    > .active {
+      background: rgb(31,178,246);
+      background: linear-gradient(to bottom,  rgba(31,178,246,1) 0%,rgba(6,101,165,1) 100%);
+      filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#1fb2f6', endColorstr='#0665a5',GradientType=0 );
+      > a {
+        color: white;
+      }
+    }
+    > .trigram {
+      font-size: 2em;
+      color: white;
+      margin: 0 0 0 auto;
     }
   }
 }
