--- a/uyut/style/scss/_variables.scss
+++ b/uyut/style/scss/_variables.scss
@@ -2,6 +2,7 @@
 @import "../../fonts/fontawesome/scss/fontawesome.scss";
 @import "../../fonts/fontawesome/scss/solid.scss";
 @import "../../fonts/fontawesome/scss/regular.scss";
+@import "../../fonts/fontawesome/scss/brands.scss";
 
 $mainColor: #f16d7f; // Розовый цвет
 $alterColor: #f6f6f6; // Серый цвет
