--- a/uyut/style/scss/_block-13.scss
+++ b/uyut/style/scss/_block-13.scss
@@ -1,8 +1,6 @@
-.block-7 {
-  position: relative;
-  width: 100%;
+.block-13 {
   > .title {
-    margin: 100px 0 0 0;
+    margin: 20px 0 0 0;
     text-align: center;
     > h2 {
       font-family: 'Museo Sans Cyrl 700';
@@ -15,27 +13,33 @@
         font-weight: 900;
       }
     }
+    > h3 {
+      font-family: 'Museo Sans Cyrl 100';
+      font-size: 1.1em;
+    }
   }
-  > .block-7-content {
-    margin: 60px 0 0 0;
+  > .block-13-content {
+    margin: 50px 0 0 0;
     > .slider {
       position: relative;
       > .slider-arrow {
         height: 50px;
         width: 50px;
         border-radius: 50%;
-        background-color: red;
-        display: none;
+        background-color: #f8f8f8;
+        display: flex;
         justify-content: center;
         align-items: center;
         cursor: pointer;
         transition: $transition;
+        z-index: 5;
       }
       > .left {
         position: absolute;
         top: 50%;
-        left: 1%;
+        left: #{calc(((100% - 1200px) / 2) - 50px)};
         transform: translateY(-50%);
+        @media (max-width: 1300px) { display: none; }
         &:hover {
           transform: scale(1.2) translateY(-50%);
         }
@@ -43,8 +47,9 @@
       > .right {
         position: absolute;
         top: 50%;
-        right: 1%;
+        right: #{calc(((100% - 1200px) / 2) - 50px)};
         transform: translateY(-50%);
+        @media (max-width: 1300px) { display: none; }
         &:hover {
           transform: scale(1.2) translateY(-50%);
         }
@@ -52,76 +57,29 @@
       > .slider-content {
         display: flex;
         justify-content: space-around;
-        @media (max-width: 900px) { flex-direction: column; align-items: center; }
+        flex-wrap: wrap;
         > .card {
           position: relative;
-          height: 250px;
+          height: 380px;
           width: 95%;
-          max-width: 550px;
-          border-radius: 50px;
+          max-width: 270px;
+          border-radius: 5px;
           box-shadow: $shadow;
-          padding: 30px;
           display: flex;
-          background-color: white;
-          @media (max-width: 900px) { margin: 25px 0 0 0;}
-          @media (max-width: 500px) { overflow: hidden;}
-          > .avatar {
-            height: 70px;
-            width: 70px;
-            border: 1px solid #138ccf;
-            border-radius: 50%;
-            overflow: hidden;
-            box-shadow: 0px 0px 10px 5px rgba(19, 140, 207, 0.3);
-            cursor: pointer;
-            transition: $transition;
-            &:hover {
-              transform: scale(1.2);
-            }
-            > img {
-              height: 100%;
-              width: 100%;
-              -o-object-fit: cover;
-                 object-fit: cover;
-            }
-          }
-          > .text {
+          overflow: hidden;
+          margin: 0 0 20px 0;
+          > img {
             height: 100%;
-            width: #{calc(100% - 100px)};
-            margin: 0 0 0 20px;
-            > h2 {
-              font-family: 'Museo Sans Cyrl 500';
-              font-size: 1.5em;
-            }
-            > h3 {
-              font-family: 'Museo Sans Cyrl 100';
-              font-size: 1.2em;
-              margin: 5px 0 0 0;
-            }
-            > p {
-              font-family: 'Museo Sans Cyrl 100';
-              font-size: 1em;
-              margin: 10px 0 0 0;
-            }
-          }
-          > .decoration {
-            position: absolute;
-            top: 55px;
-            left: 20px;
-            height: calc(100% - 50px);
-            width: calc(100% - 50px);
-            background: rgb(31,178,246);
-            background: linear-gradient(to bottom,  rgba(31,178,246,1) 0%,rgba(6,101,165,1) 100%);
-            filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#1fb2f6', endColorstr='#0665a5',GradientType=0 );
-            transform: rotate(2deg);
-            border-radius: 50px;
-            z-index: -1;
+            width: 100%;
+            -o-object-fit: cover;
+               object-fit: cover;
           }
         }
       }
       > .slider-navigation {
         margin: 50px;
         height: 15px;
-        display: flex;
+        display: none;
         justify-content: center;
         align-items: center;
         @media (max-width: 900px) { display: none; }
