--- a/uyut/style/scss/_block-2.scss
+++ b/uyut/style/scss/_block-2.scss
@@ -2,6 +2,8 @@
   > .title {
     margin: 100px 0 0 0;
     text-align: center;
+    position: relative;
+    z-index: 5;
     > h2 {
       font-family: 'Museo Sans Cyrl 700';
       font-size: 2.5em;
