--- a/uyut/style/scss/_block-3.scss
+++ b/uyut/style/scss/_block-3.scss
@@ -4,16 +4,20 @@
   background-position: center center;
   min-height: 750px;
   > .block-3-content {
+    @media (max-width: 700px) { display: flex; flex-direction: column; }
     > .block-3-form {
       width: 100%;
       max-width: 700px;
       margin: 150px 0 0 0;
+      @media (max-width: 700px) { margin: 50px 0 0 0; }
       > .title {
         display: flex;
         align-items: center;
+        @media (max-width: 700px) { margin-left: 10px; }
         > .decoration {
           height: 25px;
           width: 25px;
+          min-width: 25px;
           border-radius: 50%;
           background: rgb(31,178,246);
           background: linear-gradient(to bottom,  rgba(31,178,246,1) 0%,rgba(6,101,165,1) 100%);
@@ -26,6 +30,7 @@
           text-transform: uppercase;
           font-weight: 500;
           color: white;
+          @media (max-width: 700px) { color: #333333; }
           > span {
             font-family: 'Museo Sans Cyrl 900';
             text-transform: uppercase;
@@ -38,13 +43,16 @@
         font-family: 'Museo Sans Cyrl 300';
         font-size: 1.1em;
         color: white;
+        @media (max-width: 700px) { color: #333333; margin-left: 10px; text-align: center;}
       }
-      > .input{
+      > .input {
         display: flex;
         flex-wrap: wrap;
         justify-content: space-between;
         max-width: 570px;
         margin: 40px 0 0 0;
+        @media (max-width: 1080px) { flex-direction: column; align-items: center;}
+        @media (max-width: 700px) { max-width: 100%;}
         > input {
           height: 45px;
           width: 270px;
@@ -58,6 +66,7 @@
           font-size: 1.1em;
           border: 1px solid #3f4e5b;
           transition: $transition;
+          @media (max-width: 1080px) { margin: 10px 0 0 0;}
           &:hover {
             border: 1px solid white;
           }
@@ -66,6 +75,7 @@
       > .textarea {
         max-width: 570px;
         margin: 20px 0 0 0;
+        @media (max-width: 1080px) { max-width: 270px; margin: 10px auto 0; }
         > textarea {
           min-height: 100px;
           width: 100%;
@@ -92,12 +102,16 @@
         justify-content: space-between;
         max-width: 570px;
         margin: 40px 0 0 0;
+        @media (max-width: 1080px) { flex-direction: column; align-items: center; margin: 10px 0 0 0; }
+        @media (max-width: 700px) { max-width: 100%;}
         > button {
           height: 50px;
           width: 50%;
           border-radius: 25px;
+          @media (max-width: 1080px) { width: 270px; }
         }
         > .form-checkbox {
+          @media (max-width: 1080px) { margin: 10px 0 0 0; }
           > input[type=checkbox]:checked ~.checkbox-field > div {
             background-color: #1593d5;
           }
@@ -143,10 +157,20 @@
       background-repeat: no-repeat;
       background-position: center;
       position: relative;
+      @media (max-width: 700px) { margin: 100px 0 0 0;}
       > .image {
         position: absolute;
         top: -21%;
         left: 22%;
+        @media (max-width: 880px) {left: 0;}
+        @media (max-width: 700px) { left: 20%;}
+        @media (max-width: 400px) { left: 1%;}
+        > img {
+          height: 100%;
+          width: 100%;
+          -o-object-fit: cover;
+             object-fit: cover;
+        }
       }
       > .info-1 {
         position: absolute;
@@ -167,16 +191,19 @@
         position: absolute;
         top: 81%;
         left: -5%;
+        @media (max-width: 700px) { left: 5%; }
         > p {
           font-family: 'Museo Sans Cyrl 300';
           font-size: 1em;
           color: white;
+          @media (max-width: 700px) { color: #333333; }
         }
         > h2 {
           font-family: 'Museo Sans Cyrl 900';
           font-size: 3em;
           color: white;
           text-align: right;
+          @media (max-width: 700px) { color: #333333; }
         }
       }
       > .info-3 {
@@ -184,15 +211,21 @@
         top: 25%;
         left: 90%;
         width: 250px;
+        @media (max-width: 1580px) { width: 26%;}
+        @media (max-width: 1400px) { width: 20%;}
+        @media (max-width: 1330px) { left: auto; right: 10%;}
+        @media (max-width: 400px) { left: auto; right: 20%;}
         > p {
           font-family: 'Museo Sans Cyrl 300';
           font-size: 1em;
           color: white;
+          @media (max-width: 1000px) { color: #333333; }
         }
         > h2 {
           font-family: 'Museo Sans Cyrl 900';
           font-size: 3em;
           color: white;
+          @media (max-width: 1000px) { color: #333333; }
         }
       }
     }
