--- a/uyut/style/scss/_block-4.scss
+++ b/uyut/style/scss/_block-4.scss
@@ -26,6 +26,7 @@
       margin: 40px 0 0 0;
       box-shadow: $shadow;
       border-radius: 20px;
+      @media (max-width: 950px) { height: 70px; }
       > div {
         height: 40px;
         display: flex;
@@ -36,6 +37,8 @@
         cursor:pointer;
         font-family: 'Museo Sans Cyrl 300';
         transition: $transition;
+        @media (max-width: 950px) { height: 70px; text-align: center; padding: 0 2px;}
+        @media (max-width: 650px) { max-width: 100px;}
         &:hover {
           background: rgb(31,178,246);
           background: linear-gradient(to bottom,  rgba(31,178,246,1) 0%,rgba(6,101,165,1) 100%);
@@ -50,6 +53,17 @@
         filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#1fb2f6', endColorstr='#0665a5',GradientType=0 );
         color: white;
         font-family: 'Museo Sans Cyrl 300';
+      }
+      > .link {
+        @media (max-width: 650px) { display: none; }
+      }
+      > .trigram {
+        background: rgb(31,178,246);
+        background: linear-gradient(to bottom,  rgba(31,178,246,1) 0%,rgba(6,101,165,1) 100%);
+        filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#1fb2f6', endColorstr='#0665a5',GradientType=0 );
+        color: white;
+        font-size: 2.5em;
+        @media (min-width: 650px) { display: none; }
       }
     }
     > .block-4-table {
@@ -74,10 +88,16 @@
           font-size: 1em;
         }
         > .number { max-width: 50px; border-color: green; text-align: center; }
-        > .decoration-1 { max-width: 50px;}
+        > .decoration-1 {
+          max-width: 50px;
+          @media (max-width: 800px) { max-width: 10px;}
+        }
         > .title { margin: 0 0 0 10px;}
         > .measure { max-width: 80px;  text-align: center; }
-        > .decoration-3 { max-width: 100px; }
+        > .decoration-3 {
+          max-width: 100px;
+          @media (max-width: 740px) { max-width: 10px;}
+        }
         > .price { max-width: 80px; text-align: center; }
       }
       > .h-line {
@@ -104,12 +124,33 @@
           display: flex;
         }
         > .number { max-width: 50px; justify-content: center;}
-        > .decoration-1 { height: 1px; max-width: 50px; background-color: #d5d5d5; align-self: center; }
-        > .title { margin: 0 0 0 10px; flex-grow: 0; }
-        > .decoration-2 { margin: 0 0 0 10px; height: 1px; background-color: #d5d5d5; align-self: center;  }
-        > .measure { max-width: 80px; justify-content: center; }
-        > .decoration-3 { height: 1px; max-width: 100px; background-color: #d5d5d5; align-self: center;  }
-        > .price { max-width: 80px; justify-content: center; }
+        > .decoration-1 {
+          height: 1px; max-width: 50px; background-color: #d5d5d5; align-self: center;
+          @media (max-width: 800px) { max-width: 10px;}
+          @media (max-width: 600px) { display: none;}
+        }
+        > .title {
+          margin: 0 0 0 10px; flex-grow: 0;
+          @media (max-width: 620px) { flex-grow: 1; }
+          @media (max-width: 550px) { max-width: 125px; margin: 0; }
+        }
+        > .decoration-2 {
+          margin: 0 0 0 10px; height: 1px; background-color: #d5d5d5; align-self: center;
+          @media (max-width: 620px) { display: none;}
+        }
+        > .measure {
+          max-width: 80px; justify-content: center;
+          @media (max-width: 600px) { max-width: 30px; flex-grow: 1;}
+        }
+        > .decoration-3 {
+          height: 1px; max-width: 100px; background-color: #d5d5d5; align-self: center;
+          @media (max-width: 740px) { max-width: 10px;}
+          @media (max-width: 600px) { display: none;}
+        }
+        > .price {
+          max-width: 80px; justify-content: center;
+          @media (max-width: 600px) { flex-grow: 1;}
+        }
       }
     }
     > .block-4-button {
