--- a/uyut/style/scss/_block-5.scss
+++ b/uyut/style/scss/_block-5.scss
@@ -27,18 +27,23 @@
       text-transform: uppercase;
       font-weight: 500;
       color: white;
+      @media (max-width: 350px) { font-size: 2em; }
     }
   }
   > .block-5-content {
+    @media (max-width: 700px) { display: flex; flex-direction: column; }
     > .block-5-form {
       width: 100%;
       max-width: 700px;
       margin: 100px 0 0 0;
+      @media (max-width: 700px) { margin: 20px 0 0 0;}
       > .input {
         display: flex;
         flex-wrap: wrap;
         justify-content: space-between;
         max-width: 570px;
+        @media (max-width: 1080px) { flex-direction: column; align-items: center;}
+        @media (max-width: 700px) { max-width: 100%;}
         > input {
           height: 45px;
           width: 270px;
@@ -52,6 +57,7 @@
           font-size: 1.1em;
           border: 1px solid #3f4e5b;
           transition: $transition;
+          @media (max-width: 1080px) { margin: 10px 0 0 0;}
           &:hover {
             border: 1px solid white;
           }
@@ -60,6 +66,7 @@
       > .textarea {
         max-width: 570px;
         margin: 20px 0 0 0;
+        @media (max-width: 1080px) { max-width: 270px; margin: 10px auto 0; }
         > textarea {
           min-height: 100px;
           width: 100%;
@@ -86,12 +93,16 @@
         justify-content: space-between;
         max-width: 570px;
         margin: 40px 0 0 0;
+        @media (max-width: 1080px) { flex-direction: column; align-items: center; margin: 10px 0 0 0; }
+        @media (max-width: 700px) { max-width: 100%;}
         > button {
           height: 50px;
           width: 50%;
           border-radius: 25px;
+          @media (max-width: 1080px) { width: 270px; }
         }
         > .form-checkbox {
+          @media (max-width: 1080px) { margin: 10px 0 0 0; }
           > input[type=checkbox]:checked ~.checkbox-field > div {
             background-color: #1593d5;
           }
@@ -132,11 +143,13 @@
     > .info {
       width: 100%;
       margin: 100px 0 0 0;
+      @media (max-width: 700px) { margin: 20px 0 0 0; }
       > .list {
         display: flex;
         margin: 0 0 30px 0;
         cursor: pointer;
         transition: $transition;
+        @media (max-width: 700px) { max-width: 320px; margin: 20px auto 30px;}
         &:hover {
           transform: scale(1.2) translateX(5%);
         }
@@ -148,6 +161,7 @@
           background: linear-gradient(to bottom,  rgba(31,178,246,1) 0%,rgba(6,101,165,1) 100%);
           filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#1fb2f6', endColorstr='#0665a5',GradientType=0 );
           margin: 5px 20px 0 0;
+          @media (max-width: 700px) { margin: 5px 20px 0 10px; }
         }
         > p {
           font-family: 'Museo Sans Cyrl 300';
@@ -161,6 +175,7 @@
         font-family: 'Museo Sans Cyrl 700';
         font-size: 1.5em;
         margin-left: 30px;
+        @media (max-width: 700px) { max-width: 320px; margin: 20px auto 30px; text-align: center;}
       }
     }
   }
