--- a/uyut/style/scss/_block-6.scss
+++ b/uyut/style/scss/_block-6.scss
@@ -30,12 +30,22 @@
         font-weight: 900;
       }
     }
+    > h4 {
+      font-family: 'Museo Sans Cyrl 900';
+      text-transform: uppercase;
+      font-size: 1.5em;
+      max-width: 1240px;
+      margin: 0 auto;
+      text-align: left;
+      padding-left: 20px;
+    }
   }
   > .block-6-content {
     margin: 70px auto 0;
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
+    @media (max-width: 1140px) { justify-content: center; }
     > .card {
       height: 270px;
       width: 100%;
@@ -43,6 +53,8 @@
       display: flex;
       justify-content: space-between;
       // box-shadow: 0px 0px 5px 5px rgba(34, 60, 80, 0.2);
+      @media (max-width: 1140px) { margin: 10px 0 0 0;}
+      @media (max-width: 400px) { height: auto;}
       > .image {
         position: relative;
         height: 100%;
@@ -143,6 +155,7 @@
     }
   }
   > .block-6-buttons {
+    @media (max-width: 700px) { flex-direction: column; }
     > div {
       flex-grow: 1;
     }
@@ -151,20 +164,24 @@
       justify-content: space-between;
       align-items: center;
       flex-wrap: wrap;
+      @media (max-width: 1075px) { flex-direction: column; }
       > button {
         height: 50px;
         width: 270px;
         border-radius: 25px;
+        @media (max-width: 1075px) { margin: 10px 0 0 0;}
       }
     }
     > .text {
       display: flex;
       justify-content: center;
       align-items: center;
+      @media (max-width: 700px) { margin: 10px 0 0 0; }
       > p {
         font-family: 'Museo Sans Cyrl 300';
         font-size: 1em;
         max-width: 75%;
+        @media (max-width: 700px) { text-align: center; }
       }
     }
   }
