--- a/uyut/style/scss/about.scss
+++ b/uyut/style/scss/about.scss
@@ -5,13 +5,15 @@
 @import "navigation";
 @import "breadcrumb";
 @import "main";
-@import "block-1";
-@import "block-2";
+// @import "block-1";
+// @import "block-2";
 @import "block-3";
-@import "block-4";
-@import "block-5";
-@import "block-6";
-@import "block-7";
-@import "block-8";
+// @import "block-4";
+// @import "block-5";
+// @import "block-6";
+// @import "block-7";
+// @import "block-8";
 @import "block-9";
+@import "block-12";
+@import "block-13";
 @import "footer";
