--- a/uyut/style/scss/service.scss
+++ b/uyut/style/scss/service.scss
@@ -5,13 +5,13 @@
 @import "navigation";
 @import "breadcrumb";
 @import "main";
-@import "block-1";
+// @import "block-1";
 @import "block-2";
 @import "block-3";
-@import "block-4";
-@import "block-5";
-@import "block-6";
-@import "block-7";
-@import "block-8";
+// @import "block-4";
+// @import "block-5";
+// @import "block-6";
+// @import "block-7";
+// @import "block-8";
 @import "block-9";
 @import "footer";
