--- a/villaride/style/scss/_variables.scss
+++ b/villaride/style/scss/_variables.scss
@@ -1,4 +1,8 @@
 @import url('../fonts/proximanova/stylesheet.css');
+@import "../../fonts/fontawesome/scss/fontawesome.scss";
+@import "../../fonts/fontawesome/scss/solid.scss";
+@import "../../fonts/fontawesome/scss/regular.scss";
+@import "../../fonts/fontawesome/scss/brands.scss";
 
 $mainColor: rgba(255, 255, 255, 1); // основной цвет
 $alterColor: #f6f6f6; // Серый цвет
