--- a/villaride/style/scss/_block-1.scss
+++ b/villaride/style/scss/_block-1.scss
@@ -157,36 +157,42 @@
           }
         }
         > .block-1-form {
-          height: 500px;
-          margin: 25px 0 0 0;
-          padding: 100px 35px 130px;
+          height: 765px;
+          margin: 0 0 0 0;
+          padding: 60px 40px 0;
           background-image: url('../image/block-1-form.png');
           background-repeat: no-repeat;
-          background-position: center top;
+          background-position: 80% top;
           position: relative;
           z-index: 2;
           @media (max-width: 820px) {padding: 100px 10px 130px 10px;}
           @media (max-width: 700px) {padding: 100px 15px 130px 25px;}
           > h2 {
             font-family: 'Proxima Nova Bl';
-            font-size: 2em;
+            font-size: 2.5em;
             font-weight: 900;
             text-transform: uppercase;
             text-align: center;
-            > span {
-              // color: #21b744;
-              color: #1f7ec0;
-            }
+            color: #0a7bc8;
+          }
+          > h3 {
+            font-family: 'Proxima Nova Rg';
+            font-size: 2em;
+            font-weight: 700;
+            text-transform: uppercase;
+            text-align: center;
+            color: #ec3f3d;
           }
           > p {
             font-family: 'Proxima Nova Rg';
             font-size: 1em;
             font-weight: 400;
             text-align: center;
-            margin: 30px 0 40px 0;
+            margin: 10px 0 150px 0;
           }
           > input {
             height: 50px;
+            min-height: 50px;
             width: 100%;
             margin: 0 0 20px 0;
             border-radius: 25px;
@@ -196,6 +202,73 @@
             box-sizing: border-box;
             font-family: 'Proxima Nova Lt';
             font-size: 1em;
+          }
+          > .promo {
+            margin: 0 0 10px 0;
+            > h2 {
+              font-family: 'Proxima Nova Rg';
+              font-size: 1.2em;
+              color: #0a7bc8;
+              text-transform: uppercase;
+              > span {
+                font-family: 'Proxima Nova Rg';
+                font-size: 1em;
+                color: #ec3f3d;
+              }
+            }
+            > .timer {
+              height: 40px;
+              margin: 10px 0 0 0;
+              display: flex;
+              justify-content: space-between;
+              align-items: center;
+              > div {
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                > div {
+                  display: flex;
+                  justify-content: center;
+                  align-items: center;
+                  position: relative;
+                  height: 100%;
+                  width: 25px;
+                  margin: 0 1px;
+                  perspective: 50px;
+                  > .upper {
+                    position: absolute;
+                    top: 0;
+                    left: 0;
+                    height: 100%;
+                    width: 100%;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    background-color: black;
+                    color: white;
+                    font-weight: 900;
+                    font-size: 2em;
+                    z-index: 5;
+                    transform: rotateX(1deg);
+                  }
+                  > .bottom {
+                    position: relative;
+                    top: 0;
+                    left: 0;
+                    height: 100%;
+                    width: 100%;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    background-color: black;
+                    color: white;
+                    font-weight: 900;
+                    font-size: 2em;
+                    z-index: 1;
+                  }
+                }
+              }
+            }
           }
           > button {
             height: 50px;
