--- a/villaride/style/scss/_block-4.scss
+++ b/villaride/style/scss/_block-4.scss
@@ -106,7 +106,7 @@
       }
       > h3 {
         font-family: 'Proxima Nova Rg';
-        font-size: 1.5em;
+        font-size: 2em;
         font-weight: 700;
         color: #dd3232;
         text-align: center;
@@ -115,11 +115,12 @@
       }
       > p {
         font-family: 'Proxima Nova Rg';
-        font-size: 1em;
+        font-size: 1.5em;
         font-weight: 700;
         text-align: center;
-        max-width: 320px;
+        // max-width: 320px;
         margin: 0 auto;
+        color: #1f7ec0;
       }
     }
     > div {
@@ -157,6 +158,58 @@
           > .product {
             margin: 30px 0 0 0;
             @media (max-width: 750px) { flex-direction: column; align-items: center;}
+            position: relative;
+            > .left {
+              height: 50px;
+              width: 50px;
+              display: flex;
+              justify-content: center;
+              align-items: center;
+              position: absolute;
+              top: 35%;
+              left: 1%;
+              cursor: pointer;
+              z-index: 1;
+              background-color: white;
+              border-radius: 50%;
+              transition: $transition;
+              &:hover {
+                transform: scale(1.1);
+              }
+              > img {
+                height: 100%;
+                width: 100%;
+                -o-object-fit: cover;
+                   object-fit: cover;
+              }
+              // @media (max-width: 700px) { display: none;}
+            }
+            > .right {
+              height: 50px;
+              width: 50px;
+              display: flex;
+              justify-content: center;
+              align-items: center;
+              position: absolute;
+              position: absolute;
+              top: 35%;
+              right: 1%;
+              cursor: pointer;
+              z-index: 1;
+              background: white;
+              border-radius: 50%;
+              transition: $transition;
+              &:hover {
+                transform: scale(1.1);
+              }
+              > img {
+                height: 100%;
+                width: 100%;
+                -o-object-fit: cover;
+                   object-fit: cover;
+              }
+              // @media (max-width: 700px) { display: none;}
+            }
             > .video {
               position: relative;
               height: 240px;
@@ -278,6 +331,15 @@
               margin: 0 0 0 30px;
               align-self: flex-end;
               @media (max-width: 750px) { margin: 25px auto 0; text-align: center;}
+            }
+            > .card-9-link {
+              align-self: center;
+              font-size: 1.5em;
+              cursor: pointer;
+              transition: $transition;
+              &:hover {
+                transform: scale(1.1);
+              }
             }
           }
         }
