--- a/villaride/style/scss/_block-6.scss
+++ b/villaride/style/scss/_block-6.scss
@@ -17,6 +17,9 @@
         text-transform: uppercase;
         color: white;
         @media (max-width: 600px) {margin: 80px 0 0 0; text-align: center;}
+        > span {
+          color: #ed1200;
+        }
       }
       > p {
         margin: 20px 0 0 10px;
