--- a/villaride/style/scss/_modals.scss
+++ b/villaride/style/scss/_modals.scss
@@ -143,6 +143,13 @@
           font-weight: 900;
         }
       }
+      > .h-line {
+        height: 5px;
+        min-height: 5px;
+      }
+      > .active {
+        color: #ed1200;
+      }
     }
     > .close {
       position: relative;
@@ -173,11 +180,12 @@
           &:hover {
             border: 3px solid #23bc47;
           }
-          > img {
-            height: 70%;
-            width: 70%;
-            -o-object-fit: cover;
-               object-fit: cover;
+          > .close-image {
+            font-size: 2em;
+            color: #333333;
+            &:hover {
+              color: #23bc47;
+            }
           }
         }
       }
@@ -187,7 +195,7 @@
     height: 100%;
     max-height: 580px;
     width: 100%;
-    max-width: 450px;
+    max-width: 385px;
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
@@ -223,11 +231,13 @@
           &:hover {
             border: 3px solid #23bc47;
           }
-          > img {
-            height: 70%;
-            width: 70%;
-            -o-object-fit: cover;
-               object-fit: cover;
+          > i {
+            font-size: 2em;
+            color: white;
+            @media (max-height: 650px) { color: black; }
+            &:hover {
+              color: #23bc47;
+            }
           }
         }
       }
@@ -248,7 +258,7 @@
         text-transform: uppercase;
         text-align: center;
         > span {
-          color: #21b744;
+          color: #1f7ec0;
         }
       }
       > p {
@@ -343,11 +353,12 @@
           &:hover {
             border: 3px solid #23bc47;
           }
-          > img {
-            height: 70%;
-            width: 70%;
-            -o-object-fit: cover;
-               object-fit: cover;
+          > .close-image {
+            font-size: 2em;
+            color: #333333;
+            &:hover {
+              color: #23bc47;
+            }
           }
         }
       }
@@ -376,6 +387,69 @@
         font-size: 1.2em;
         max-width: 310px;
         margin: 0 auto;
+      }
+    }
+  }
+  > .modal-video {
+    width: 100%;
+    max-width: 600px;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    > .close {
+      position: relative;
+      width: 100%;
+      > .close-block {
+        position: absolute;
+        top: -50px;
+        right: 0;
+        display: flex;
+        align-items: center;
+        > .close-text {
+          font-family: 'Proxima Nova Rg';
+          margin: 0 15px 0 0;
+          font-size: 1.2em;
+          font-weight: 400;
+          color: white;
+        }
+        > .close-icon {
+          height: 40px;
+          width: 40px;
+          border: 3px solid white;
+          border-radius: 50%;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          background-color: none;
+          cursor: pointer;
+          &:hover {
+            border: 3px solid #23bc47;
+          }
+          > .close-image {
+            font-size: 2em;
+            color: white;
+            &:hover {
+              color: #23bc47;
+            }
+          }
+        }
+      }
+    }
+    > .video {
+      background-color: white;
+      height: 100%;
+      // max-height: 170px;
+      width: 100%;
+      // max-width: 400px;
+      border-radius: 5px;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      > video {
+        height: 100%;
+        width: 100%;
+        -o-object-fit: cover;
+           object-fit: cover;
       }
     }
   }
